# fontabex

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: bump-version.mjs
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/parser/: avar.rs  cmap.rs  fvar.rs  glyf.rs  head.rs  hhea.rs  hmtx.rs  hvar.rs  loca.rs  maxp.rs  mod.rs  mvar.rs  name.rs  os2.rs  post.rs  reader.rs  stat.rs  table_directory.rs  variations.rs  vhea.rs  vmtx.rs  vvar.rs
src-tauri/src/parser/data/: macintosh-language-codes-comma.csv
src/components/: AppToolbar.svelte  HexPane.svelte  ParsedTreeItem.svelte  TableSidebar.svelte  VirtualList.svelte  WelcomePage.svelte  WindowControls.svelte
src/lib/: fontTables.ts  parsedFormatting.ts  titlebarContextMenu.ts
